--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <h1>
                 <div class="typing-text">Terell Reed_</div>
                 <br>
-                <div class="typing-text" style="animation-delay: 1s;">Developer & Leader</div>
+                <div class="typing-text" style="animation-delay: 1s;">Developer</div>
             </h1>
             <p>No Limits. No Excuses. Just Execution.</p>
             <a href="/book.html" class="button fade-up" style="display: inline-block; margin-top: 2rem; margin-right: 1rem; padding: 12px 28px; text-decoration: none; background-color: crimson; color: #fff; border: none; border-radius: 2px; cursor: pointer; font-size: 15px; letter-spacing: 0.5px; transition: all 0.3s ease;">Book Now</a>
@@ -590,10 +590,13 @@
 
     <section id="about" class="about">
         <h2 class="section-title fade-up">About Me</h2>
-        <div class="about-container">
-            <div class="about-content fade-up">
-                <h3>Innovator & Technology Leader</h3>
-                <p>A passionate developer and technology consultant with 3+ years experience crafting innovative solutions. Proud member of Kappa Alpha Psi Fraternity, Inc., bringing leadership and excellence to every project.</p>
+        <div class="about-container" style="grid-template-columns: repeat(2, 1fr); gap: 4rem;">
+            <div class="about-image fade-up" style="position: relative; border-radius: 12px; overflow: hidden; aspect-ratio: 1; max-width: 500px; margin: 0 auto;">
+                <img src="IMG_0130 (1).JPG " alt="Terell Reed" style="width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 1px solid rgba(205, 16, 65, 0.1); transition: transform 0.3s ease;">
+            </div>
+            <div class="about-content fade-up" style="display: flex; flex-direction: column; justify-content: center;">
+                <h3 style="font-size: 2rem; margin-bottom: 1.5rem; color: var(--primary);">Innovator & Technology Leader</h3>
+                <p style="font-size: 1.1rem; line-height: 1.8;">A passionate developer and technology consultant with 3+ years experience crafting innovative solutions. Proud member of Kappa Alpha Psi Fraternity, Inc., bringing leadership and excellence to every project.</p>
             </div>
         </div>
     </section>
