--- a/index.html
+++ b/index.html
@@ -582,6 +582,165 @@
                 font-size: 2.5rem;
             }
         }
+    /* Mobile Responsiveness Improvements */
+@media (max-width: 768px) {
+    /* Global Adjustments */
+    body {
+        font-size: 16px;
+    }
+
+    /* Navigation */
+    nav {
+        padding: 1rem;
+    }
+
+    .nav-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo {
+        margin-bottom: 1rem;
+    }
+
+    .nav-links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        width: 100%;
+    }
+
+    .nav-links a {
+        width: 100%;
+        text-align: center;
+        padding: 0.75rem;
+        background: rgba(205, 16, 65, 0.1);
+        border-radius: 8px;
+    }
+
+    /* Hero Section */
+    .hero {
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .hero-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero h1 {
+        font-size: 2.5rem;
+        text-align: center;
+    }
+
+    .hero p {
+        text-align: center;
+        max-width: 100%;
+    }
+
+    .hero .button {
+        margin: 0.5rem;
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+
+    /* About Section */
+    .about-container {
+        grid-template-columns: 1fr !important;
+        gap: 2rem !important;
+    }
+
+    .about-image {
+        max-width: 300px !important;
+    }
+
+    .about-content {
+        text-align: center;
+    }
+
+    .about-content h3 {
+        font-size: 1.5rem !important;
+    }
+
+    /* Awards, Conferences, Certifications Sections */
+    .awards-grid,
+    .conference-grid,
+    .cert-grid {
+        grid-template-columns: 1fr !important;
+    }
+
+    /* Resume Section */
+    .resume-buttons {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .resume-btn {
+        width: 100%;
+        justify-content: center;
+    }
+
+    /* Section Titles */
+    .section-title {
+        font-size: 2rem;
+    }
+
+    /* Contact Section */
+    .contact-container {
+        grid-template-columns: 1fr;
+    }
+
+    /* Signature */
+    .signature {
+        font-size: 4rem;
+    }
+
+    /* Buttons and Interactive Elements */
+    .resume-btn, 
+    button, 
+    .hero .button {
+        width: 100%;
+        max-width: 300px;
+        margin: 0.5rem 0;
+    }
+}
+
+/* Additional Mobile Improvements */
+@media (max-width: 480px) {
+    .hero h1 {
+        font-size: 2rem;
+    }
+
+    .about-image {
+        max-width: 250px !important;
+    }
+
+    .signature {
+        font-size: 3rem;
+    }
+}
+
+/* Ensure images are responsive */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Improve touch targets for mobile */
+a, button {
+    min-height: 44px;
+    min-width: 44px;
+    padding: 10px;
+}
+
+/* Prevent text overflow */
+* {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
     </style>
 </head>
 <body>
@@ -617,6 +776,9 @@
     <section id="about" class="about">
         <h2 class="section-title fade-up">About Me</h2>
         <div class="about-container" style="grid-template-columns: repeat(2, 1fr); gap: 4rem;">
+            <div class="about-image fade-up" style="position: relative; border-radius: 12px; overflow: hidden; aspect-ratio: 1; max-width: 500px; margin: 0 auto;">
+                <img src="" alt="Terell Reed" style="width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 1px solid rgba(205, 16, 65, 0.1); transition: transform 0.3s ease;">
+            </div>
             <div class="about-content fade-up" style="display: flex; flex-direction: column; justify-content: center;">
                 <h3 style="font-size: 2rem; margin-bottom: 1.5rem; color: var(--primary);">Innovator & Technology Leader</h3>
                 <p style="font-size: 1.1rem; line-height: 1.8;">A passionate developer and technology consultant with 3+ years experience crafting innovative solutions. Proud member of Kappa Alpha Psi Fraternity, Inc., bringing leadership and excellence to every project.</p>
