--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@
     <div class="bg-video-container">
         <video autoplay="" muted="" loop="" playsinline="" class="bg-video">
             <!-- Placeholder video - replace with your own video file in the src folders -->
-            <source src="IMG_2396.mp4" type="video/mp4">
+            <source src="https://media-hosting.imagekit.io/0a1df2c5e0474c06/IMG_2396.mp4?Expires=1841345153&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=Fm0R8Pu0PqZhg2Q9BBCu28fNwoyR9d0Alw6v6GZTtLJTaY4Q59EoTKc09ISjGI2DpSm89dQC4lkIPdq4OTUr4f1Igc87MylBo3WhMaP13yBinBLCvTcWxgnGusMY00sSYADpKgt8-8-m3p5l4R0gtLsT6Ump7iWfFlTzxwbTY0YA7ytow5GSf40UPx7WbhEzmyLDkemuJTX5tz7OFi59lWi7GA3eR~uXTeT3TYrbNJxFfWjp1tOy2V9BEodb-cB23Kap0nkl6E4H40ZAYl7i5r5b1heg0YNcIhc7lZWxNPYhjRgGAgxI1x4RWjq6gj0Z0bczzTVvdwXVlq9nxS1p-g__" type="video/mp4">
         </video>
     </div>
     
