--- a/index.html
+++ b/index.html
@@ -1925,10 +1925,10 @@
                 <h3 class="resume-title">Download My Resume</h3>
                 <p class="resume-text">Download my latest resume to learn more about my professional experience, education, skills, and qualifications.</p>
                 <div class="resume-buttons">
-                    <a href="TerellReed__Resume (4).pdf" download="" class="resume-btn resume-btn-primary">
+                    <a href="TerellReed__Resume6.pdf" download="" class="resume-btn resume-btn-primary">
                         <i class="fas fa-download"></i> Download PDF
                     </a>
-                    <a href="TerellReed__Resume (4).pdf" target="_blank" class="resume-btn resume-btn-secondary">
+                    <a href="TerellReed__Resume6.pdf" target="_blank" class="resume-btn resume-btn-secondary">
                         <i class="fas fa-eye"></i> View Online
                     </a>
                 </div>
